# qtdeclarative

./: .cmake.conf  .gitignore  CMakeLists.txt  REUSE.toml  dependencies.yaml  licenseRule.json
cmake/: QtDeclarativeSetup.cmake
examples/quick/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  qqmlcoreglobal_p.h  qqmlsettings.cpp  qqmlsettings_p.h  qqmlstandardpaths.cpp  qqmlstandardpaths_p.h  qqmlsysteminformation.cpp  qqmlsysteminformation_p.h
src/effects/: CMakeLists.txt  qgfxsourceproxy.cpp  qgfxsourceproxy_p.h  qquickmultieffect.cpp  qquickmultieffect_p.h  qquickmultieffect_p_p.h  qtquickeffectsglobal_p.h
src/labs/: CMakeLists.txt
src/particles/: CMakeLists.txt  qquickage.cpp  qquickage_p.h  qquickangledirection.cpp  qquickangledirection_p.h  qquickcumulativedirection.cpp  qquickcumulativedirection_p.h  qquickcustomaffector.cpp  qquickcustomaffector_p.h  qquickdirection.cpp  qquickdirection_p.h  qquickellipseextruder.cpp  qquickellipseextruder_p.h  qquickfriction.cpp  qquickfriction_p.h  qquickgravity.cpp  qquickgravity_p.h  qquickgroupgoal.cpp  qquickgroupgoal_p.h  qquickimageparticle.cpp  qquickimageparticle_p.h  qquickitemparticle.cpp  qquickitemparticle_p.h  qquicklineextruder.cpp  qquicklineextruder_p.h  qquickmaskextruder.cpp  qquickmaskextruder_p.h  qquickparticleaffector.cpp  qquickparticleaffector_p.h  qquickparticleemitter.cpp  qquickparticleemitter_p.h  qquickparticleextruder.cpp  qquickparticleextruder_p.h  qquickparticlegroup.cpp  (+24 more)
tests/auto/cmake/test_duplicate_files/: CMakeLists.txt
tools/: CMakeLists.txt
(+2566 files in other folders)
